# delivery_robot

./: .gitignore  LICENSE  README.md  hist  install_notes  setup.bash
scripts/: realsense.bash  ros_dependencies.bash  setup.bash
src/gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt
src/gazebo_ros_pkgs/gazebo_plugins/include/gazebo_plugins/: gazebo_ros_skid_steer_drive.h  gazebo_ros_skid_steer_six.h
src/gazebo_ros_pkgs/gazebo_plugins/src/: gazebo_ros_diff_drive_six.cpp  gazebo_ros_skid_steer_drive.cpp  gazebo_ros_skid_steer_six.cpp
src/realsense-ros-2.2.17/realsense2_camera/launch/: rs_d400_and_t265.launch
src/realsense-ros-2.2.17/realsense2_description/urdf/: _t265.urdf.xacro
src/roboclaw/: CMakeLists.txt  package.xml
src/roboclaw/launch/: diffdrive.launch
src/roboclaw/scripts/: teleop_360  teleop_360.py  teleop_from_scratch.bash
src/roboclaw/src/: diffdrive_roscore.cpp  roboclaw_roscore.cpp
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/launch/: basic_model.launch  display.launch  gazebo_world.launch  localization.launch  mapping.launch  move_base.launch  run_cameras.launch  run_robot.launch  show_model.launch  slam.launch
src/robot_controller/param/: costmap_common_params.yaml  d435_costmap_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
src/robot_controller/rviz/: urdf.rviz
src/robot_controller/urdf/: mybot.gazebo  robot_description.urdf.xacro  t265_calib.json
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch
src/robot_description/urdf/: robot_description.urdf.xacro
src/robot_description/worlds/: basic.world
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/launch/: gazebo_world.launch  localization.launch  mapping.launch  move_base.launch  slam copy.launch  slam.launch
src/robot_gazebo/src/: gazebo_ros_diff_drive_six.cpp
src/robot_gazebo/src/include/: gazebo_ros_diff_drive_six.h
src/robot_gazebo/urdf/: mybot.gazebo
src/robot_gazebo/worlds/: willow_garage.world
src/robot_gazebo/xacro/: depthcam.xacro
tf_tree/: frames.gv
