<package format="2">
  <name>robot_gazebo</name>
  <version>0.0.0</version>
  <description>The robot_gazebo package</description>
  <maintainer email="sam@todo.todo">sam</maintainer>  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
