<package format="2">
  <name>robot_gazebo</name>
  <version>0.0.0</version>
  <description>The robot_gazebo package</description>
  <maintainer email="sam@todo.todo">sam</maintainer>  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>rosconsole</depend>
  <depend>diagnostic_updater</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
